bin/tests/snapshots/attribute_ordering__9031724b60fccca02c4b091ca5f8735a_lint_errfmt.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  Banana = true;
  DOMAIN = true;
  _module = true;
  apple = true;
}
---
