bin/tests/snapshots/attribute_ordering__a238c74446e0f7ae406753ddc32d65aa_fix.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  services.zebra = true;
  services.apple = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,4 @@
 {
+  services.apple = true;
   services.zebra = true;
-  services.apple = true;
 }
