bin/tests/snapshots/attribute_ordering__a238c74446e0f7ae406753ddc32d65aa_lint_errfmt.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  services.zebra = true;
  services.apple = true;
}
---
<temp_file_path>>3:3:W:31:[attribute_ordering] `services.apple` is out of alphabetical order
