bin/tests/snapshots/attribute_ordering__a238c74446e0f7ae406753ddc32d65aa_lint_json.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  services.zebra = true;
  services.apple = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 25
            }
          },
          "message": "`services.apple` is out of alphabetical order",
          "suggestion": null
        }
      ]
    }
  ]
}
