bin/tests/snapshots/attribute_ordering__a8c840adbacf5ad529d0dc681bb6ae94_fix.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  zebra = true;
  apple = true;
}
---
