bin/tests/snapshots/attribute_ordering__a8c840adbacf5ad529d0dc681bb6ae94_lint_errfmt.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  zebra = true;
  apple = true;
}
---
<temp_file_path>>3:3:W:31:[attribute_ordering] `apple` is out of alphabetical order
