bin/tests/snapshots/attribute_ordering__a8c840adbacf5ad529d0dc681bb6ae94_lint_json.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  zebra = true;
  apple = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 16
            }
          },
          "message": "`apple` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 4,
                "column": 2
              }
            },
            "fix": "{\n  apple = true;\n  zebra = true;\n}"
          }
        }
      ]
    }
  ]
}
