bin/tests/snapshots/attribute_ordering__a8c840adbacf5ad529d0dc681bb6ae94_lint_stderr.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  zebra = true;
  apple = true;
}
---
[attribute_ordering] Warning: Attributes are not in alphabetical order
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   apple = true;
   │   ──────┬──────  
   │         ╰──────── apple is out of alphabetical order
───╯
