bin/tests/snapshots/attribute_ordering__b842cdb291625b2b8f36772e7f63e88e_fix.snap
---
source: bin/tests/attribute_ordering.rs
---
{
  inherit lib;
  apple = true;
  zebra = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,6 @@
 {
   inherit lib;
+
   apple = true;
   zebra = true;
 }
