bin/tests/snapshots/attribute_ordering__b842cdb291625b2b8f36772e7f63e88e_lint_json.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  inherit lib;
  apple = true;
  zebra = true;
}
---
